/**
 *
 * Please note:
 * This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 * Do not edit this file manually.
 *
 */

@file:Suppress(
  "ArrayInDataClass",
  "DuplicatedCode",
  "EnumEntryName",
  "RemoveRedundantQualifierName",
  "RemoveRedundantCallsOfConversionMethods",
  "REDUNDANT_CALL_OF_CONVERSION_METHOD",
  "RedundantUnitReturnType",
  "RemoveEmptyClassBody",
  "UnnecessaryVariable",
  "UnusedImport",
  "UnnecessaryVariable",
  "unused",
  "ProtectedInFinal",
  "AddExplicitTargetToParameterAnnotation",
)
package remote.models


import com.squareup.moshi.Json
import com.squareup.moshi.JsonClass

/**
 * 
 *
 * @param id User ID
 * @param username The username of the user
 * @param createdAt The time the user was created
 * @param followersCount The number of followers for the user
 * @param followingCount The number of users the given user is following
 * @param displayName The user's display name
 * @param note Biography of user
 * @param avatar URL to the avatar image
 * @param header URL to the header image
 */
@JsonClass(generateAdapter = true)
data class User (
    /* User ID */
    @Json(name = "id")
    val id: kotlin.Int,

    /* The username of the user */
    @Json(name = "username")
    val username: kotlin.String,

    /* The time the user was created */
    @Json(name = "created_at")
    val createdAt: java.time.OffsetDateTime,

    /* The number of followers for the user */
    @Json(name = "followers_count")
    val followersCount: kotlin.Int,

    /* The number of users the given user is following */
    @Json(name = "following_count")
    val followingCount: kotlin.Int,

    /* The user's display name */
    @Json(name = "display_name")
    val displayName: kotlin.String? = null,

    /* Biography of user */
    @Json(name = "note")
    val note: kotlin.String? = null,

    /* URL to the avatar image */
    @Json(name = "avatar")
    val avatar: kotlin.String? = null,

    /* URL to the header image */
    @Json(name = "header")
    val header: kotlin.String? = null

) {


}

